selection bumps and TBDs

--- a/vietnam2.html
+++ b/vietnam2.html
@@ -110,7 +110,7 @@
       'takeoff',
       'TAKEOFFLOCATION',
       undefined, // no size field
-      {draggable_labels: true}
+      { draggable_labels: true, useColorScale: true }
     );
   });
 
