--- a/vietnam2.html
+++ b/vietnam2.html
@@ -48,7 +48,7 @@
 </body>
 
 <script type="module" lang="ts">
-  import Scatterplot from './src/deepscatter';
+  import {Scatterplot} from './src/deepscatter';
   import { select } from 'd3-selection';
 
   window.select = select; // For the click function below.
