more support for unevenly loaded tile batches

--- a/integers.html
+++ b/integers.html
@@ -328,12 +328,12 @@
       duration: 1000,
       encoding: {
         foreground: {
-          field: k2,
+          field: key,
           op: 'eq',
           a: 1,
         },
         size: {
-          field: k2,
+          field: key,
           domain: [0, 1],
           range: [0.5, 5],
         },
