--- a/integers.html
+++ b/integers.html
@@ -18,7 +18,7 @@
   <div id="deepscatter"></div>
 </body>
 <script type="module" lang="ts">
-  import { Scatterplot, Dataset, Bitmask, dictionaryFromArrays } from './src/deepscatter';
+  import { Scatterplot, Deeptable, Bitmask, dictionaryFromArrays } from './src/deepscatter';
   import {
     tableFromArrays,
     Table,
